--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -15,11 +15,11 @@ body {
 section {
   background-color: var(--section-background);
   backdrop-filter: var(--section-background-blur);
-  padding: 2rem;
+  padding: 1rem;
   margin-bottom: 2rem;
-  border-radius: 25px;
+  border-radius: 20px;
   text-align: center;
-  max-width: calc(100% - 1rem);
+  max-width: calc(100% - .8rem);
   margin-left: auto;
   margin-right: auto;
 }
